Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html{
     font-family: url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     overflow-x: hidden;
-    overflow: hidden
 }
 
 body{
